Spacing fix on About/Work pages

--- a/styles/Content.scss
+++ b/styles/Content.scss
@@ -2,6 +2,7 @@
     h1:first-of-type {
         text-align: left;
         font-size: 5rem;
+        padding-top: 32px;
     }
 }
 
